--- a/sass/style.sass
+++ b/sass/style.sass
@@ -85,3 +85,11 @@ a
         width: 829px
         position: absolute
         right: -168px
+.promo-left,
+.promo-right
+    flex: 0 0 49%
+.promo-left
+    background-image: url(../img/promo-left.png)   
+
+.promo-right
+    background-image: url(../img/promo-right.png)
