--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,7 +4,7 @@
 *
     box-sizing: border-box
 
-@font-face 
+@font-face
     font-family: 'Open Sans Regular'
     src: url('../fonts/OpenSans-Regular.eot')
     src: url('../fonts/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
@@ -12,7 +12,7 @@
     url('../fonts/OpenSans-Regular.ttf') format('truetype')
     font-weight: normal
     font-style: normal
-@font-face 
+@font-face
     font-family: 'Nunito Sans'
     src: url('../fonts/NunitoSans-Bold.eot')
     src: url('../fonts/NunitoSans-Bold.eot?#iefix') format('embedded-opentype'),
@@ -20,7 +20,7 @@
     url('../fonts/NunitoSans-Bold.ttf') format('truetype')
     font-weight: 700
     font-style: normal
-@font-face 
+@font-face
     font-family: 'Nunito Sans'
     src: url('../fonts/NunitoSans-ExtraBold.eot')
     src: url('../fonts/NunitoSans-ExtraBold.eot?#iefix') format('embedded-opentype'),
@@ -73,7 +73,6 @@
             text-transform: uppercase
             font-size: 14px
 
-
 .visual
     flex-grow: 1
     display: flex
@@ -100,8 +99,31 @@
     background-position: center
 .promo-left
     background-image: url(../img/promo-left.png)
-    padding: 116px 50px    
+    padding: 116px 50px
 
 .promo-right
     background-image: url(../img/promo-right.png)
     padding: 102px 50px
+.sale
+    font-size: 14px
+    font-weight: 900
+    background: #f37335
+    padding: 5px 19px
+    border-radius: 14px
+    display: inline-block
+    text-transform: uppercase
+.cost
+    font-size: 60px
+    font-family: Nunito Sans
+    font-weight: 800
+
+.description
+    font-family: Open Sans Regular
+    color: #faf9f9
+    font-size: 15px
+
+.promo-left .description
+    max-width: 392px
+.promo-right .description
+    max-width: 300px
+
