--- a/sass/style.sass
+++ b/sass/style.sass
@@ -142,6 +142,8 @@
     color: #fff
     padding-top: 117px
     padding-bottom: 106px
+.footer__container
+    margin-bottom: 30px
    
     
 .logo
@@ -177,3 +179,6 @@
     color: #FBB731
     line-height: 34px
     font-family: Open Sans Regular
+iframe 
+    display: block
+    margin: 0 auto
